# python-skos

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
scripts/: run-build.sh  run-linter.sh  run-tests.sh
src/python_skos/: skos.py
tests/: test_collection.py  test_concept.py  test_concepts.py  test_conceptscheme.py  test_rdfbuilder.py  test_rdfloader.py
